--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,23 +1,21 @@
-<div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
-</div>
+<section>
+	<div class="container align-center">
+		<h1><strong>Lorem ipsum dolor sit amet, consectetur </strong><br>adipisicing elit</h1>
+		<h4 class="hidden-xs"> quae quos rem repellendus saepe. Asperiores ex molestias,</h4>
+	</div>
+</section>
 
-<div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
-  <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
-  </p>
+<section>
+	<h1>Products</h1>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto aut dolores, dolorum facere ipsam
+	necessitatibus pariatur porro, quae quos rem repellendus saepe. Asperiores ex molestias, odio provident qui vitae.
+</section>
 
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
+<section>
+	<h1>Feed</h1>
+	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur cum deleniti deserunt distinctio ea
+	earum excepturi, maiores molestias non omnis optio, pariatur perferendis quisquam sequi ullam ut vero voluptatibus.
+</section>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
-</div>
+
+
