--- a/app/styles/tools/_functions.scss
+++ b/app/styles/tools/_functions.scss
@@ -1,15 +1,8 @@
 // =======================
 // Tools/Functions
-// Thanks to @sutterlity
-// https://github.com/sutter/POPY-Starter-integration-web/blob/master/scss/tools/_fonctions.scss
 // =======================
 
-// Convert px to em
-@function pxtoem($target, $context){
-    @return ($target/$context)+0em;
-}
-
-// Convert em to px
-@function emtopx($target, $context){
-    @return ($target*$context)+0px;
+@function rem($pxval) {
+	$base: 16;
+	@return ($pxval / $base) * 1rem;
 }
