Create basic layout.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,21 +1,100 @@
-<section>
-	<div class="container align-center">
+<section id="hero">
+	<div class="container ">
 		<h1><strong>Lorem ipsum dolor sit amet, consectetur </strong><br>adipisicing elit</h1>
 		<h4 class="hidden-xs"> quae quos rem repellendus saepe. Asperiores ex molestias,</h4>
 	</div>
 </section>
 
-<section>
+<section id="product">
 	<h1>Products</h1>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto aut dolores, dolorum facere ipsam
 	necessitatibus pariatur porro, quae quos rem repellendus saepe. Asperiores ex molestias, odio provident qui vitae.
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
+		</div>
+
+	</div>
 </section>
 
 <section>
 	<h1>Feed</h1>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur cum deleniti deserunt distinctio ea
 	earum excepturi, maiores molestias non omnis optio, pariatur perferendis quisquam sequi ullam ut vero voluptatibus.
+
+
+
+
+
 </section>
 
 
+<!--Pattern HTML-->
+<section id="pattern" class="pattern">
+	<ul class="grid">
+		<li>
+			<div>
+				<a href="#">1</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">2</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">3</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">4</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">5</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">6</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">7</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">8</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">9</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">10</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">11</a>
+			</div>
+		</li>
+		<li>
+			<div>
+				<a href="#">12</a>
+			</div>
+		</li>
+	</ul>
+</section>
 
