--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -28,3 +28,55 @@ body {
 	-ms-transform: translate(-100%);
 	transform: translate(-100%);
 }
+
+#hero {
+	position: relative;
+	display: table;
+	width: 100%;
+	padding-top: .15625rem;
+	background: #fff no-repeat center center;
+	height: 29.25rem;
+	background: #f5f5f5;
+	@media (min-width: $screen-md-min) {
+		height: 100vh;
+		background-size: cover;
+	}
+}
+
+.grid {
+	overflow: hidden;
+	padding: 0.5em 0 0 0.5em;
+	//	max-width: 76em;
+	margin: 0 auto;
+	li {
+		padding: 0 0.5em 0.5em 0;
+		> div {
+			background: #808080;
+			padding: 7em 2em;
+			text-align: center;
+		}
+		a {
+			color: #fff;
+		}
+		@media (min-width: $screen-sm-min) {
+
+			width: 50%;
+			float: left;
+		}
+		@media (min-width: $screen-md-min) {
+
+			width: 33.3333333%;
+			&.wide {
+				width: 66.666666%;
+			}
+		}
+		@media (min-width: $screen-lg-min) {
+
+			width: 25%;
+			&.wide {
+				width: 50%;
+			}
+
+		}
+	}
+}
