--- a/app/styles/tools/_functions.scss
+++ b/app/styles/tools/_functions.scss
@@ -2,7 +2,25 @@
 // Tools/Functions
 // =======================
 
-@function rem($pxval) {
-	$base: 16;
-	@return ($pxval / $base) * 1rem;
-}
+//@function rem($pxval) {
+//	$base: 16;
+//	@return ($pxval / $base) * 1rem;
+//}
+//$em-base: 16px !default;
+//
+//@function strip-units($value) {
+//	@return ($value / ($value * 0 + 1));
+//}
+//
+//
+//@function rem($pxval) {
+//	@if not unitless($pxval) {
+//		$pxval: strip-units($pxval);
+//	}
+//
+//	$base: $em-base;
+//	@if not unitless($base) {
+//		$base: strip-units($base);
+//	}
+//	@return ($pxval / $base) * 1rem;
+//}
