--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,16 @@
 <section id="hero">
-	<div class="container ">
-		<h1><strong>Lorem ipsum dolor sit amet, consectetur </strong><br>adipisicing elit</h1>
-		<h4 class="hidden-xs"> quae quos rem repellendus saepe. Asperiores ex molestias,</h4>
-	</div>
+
+		<div class="container">
+			<div class="hero-info">
+
+			<h1><strong>Like the lush Indonesian island of its origin, <br>this spicy coffee stands alone.</strong></h1>
+			<h4 class="hidden-xs">Full-bodied with a smooth mouthfeel, lingering flavors of dried herbs and fresh earth</h4>
+
+			<a href="" class="btn btn-prime">Shop Now</a>
+			</div>
+
+		</div>
+	<!--<div class="overlay"></div>-->
 </section>
 
 <section id="product">
@@ -11,10 +19,10 @@
 	necessitatibus pariatur porro, quae quos rem repellendus saepe. Asperiores ex molestias, odio provident qui vitae.
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" />  </div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
+			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
 		</div>
 
 	</div>
@@ -24,9 +32,6 @@
 	<h1>Feed</h1>
 	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae consequuntur cum deleniti deserunt distinctio ea
 	earum excepturi, maiores molestias non omnis optio, pariatur perferendis quisquam sequi ullam ut vero voluptatibus.
-
-
-
 
 
 </section>
