--- a/app/styles/layout/_home.scss
+++ b/app/styles/layout/_home.scss
@@ -1,3 +1,102 @@
 /* ==|======================
    Layout/Home
    ========================= */
+
+.main-wrapper {
+	height: 100%;
+	@media (min-width: $screen-md-min) {
+		padding-left: 280px;
+	}
+}
+
+#hero {
+	position: relative;
+	display: table;
+	width: 100%;
+	padding-top: .15625rem;
+	background: #fff no-repeat center center;
+	height: 29.25rem;
+	background: #f5f5f5 url('../images/StBalmainCoffee.jpg') 0 0 no-repeat;
+	background-size: cover;
+
+	&:after {
+//		@media (min-width: $screen-md-min) {
+//			height: 100vh;
+//		}
+
+		content: "";
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		opacity: 0.65;
+		background: $dune;
+	}
+
+
+	@media (min-width: $screen-md-min) {
+		height: 100vh;
+		background-size: cover;
+	}
+
+}
+
+.hero-info {
+	padding: 0 5%;
+	position: absolute;
+	top: 50%;
+	right: 0;
+	left: 0;
+	z-index: 30;
+	width: 100%;
+	@include translateY(-50%);
+	color: white;
+	text-align: center;
+	h1 {
+		font-size: 48px;
+	}
+	h4 {
+		font-size: 24px;
+		font-style: italic;
+	}
+}
+
+.grid {
+	overflow: hidden;
+	padding: 0.5em 0 0 0.5em;
+	//	max-width: 76em;
+	margin: 0 auto;
+	li {
+		padding: 0 0.5em 0.5em 0;
+		> div {
+			background: #808080;
+			padding: 7em 2em;
+			text-align: center;
+		}
+		a {
+			color: #fff;
+		}
+		@media (min-width: $screen-sm-min) {
+
+			width: 50%;
+			float: left;
+		}
+		@media (min-width: $screen-md-min) {
+
+			width: 33.3333333%;
+			&.wide {
+				width: 66.666666%;
+			}
+		}
+		@media (min-width: $screen-lg-min) {
+
+			width: 25%;
+			&.wide {
+				width: 50%;
+			}
+
+		}
+	}
+}
+
