--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,4 +1,9 @@
 $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
+
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+@import url(http://fonts.googleapis.com/css?family=Merriweather:400,700,400italic,700italic);
+@import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic);
+
 // bower:scss
 @import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
 // endbower
@@ -27,10 +32,12 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 /* Compass */
 @import "compass/css3/images";
 @import "compass/typography/lists/inline-list";
+@import "compass/css3/transform";
+
 
 /* Tools */
 @import "tools/functions";
-@import "tools/site-settings";
+@import "tools/variables";
 @import "tools/mixins";
 @import "tools/helpers";
 
@@ -42,6 +49,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 //@import "fonts/...";
 
 /* Layout */
+@import "layout/home";
+@import "layout/main";
 @import "layout/header";
 @import "layout/nav";
 @import "layout/footer";
