--- a/app/styles/modules/_btn.scss
+++ b/app/styles/modules/_btn.scss
@@ -2,3 +2,30 @@
    Module/Button
    ======================= */
 
+.btn-prime, .btn-minimal {
+	display: inline-block;
+	padding: 17px 60px 14px;
+	color: #FFF;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	@include transition-property(background, color, border);
+	@include transition-duration(0.5s);
+	@include transition-timing-function(ease-in-out);
+	border: 2px solid #c19e48;
+}
+
+
+.btn-prime {
+	display: inline-block;
+	font-size: 100%;
+	font-weight: 300;
+	margin: 1.3em 0 0 0;
+	box-shadow: 0 2px 3px rgba(0, 0, 0, 0.2);
+	background: $gold;
+	&:hover, &:focus {
+		color: #FFF;
+		background: shade($gold,20%);
+		border: 2px solid shade($gold,15%);
+	}
+}
