--- a/app/styles/layout/_nav.scss
+++ b/app/styles/layout/_nav.scss
@@ -15,4 +15,9 @@
 	-webkit-transform: translate(-100%);
 	-ms-transform: translate(-100%);
 	transform: translate(-100%);
+
+//	@media (min-width: $screen-lg-min) {
+//		width: 280px;
+//	}
+
 }
