--- a/app/styles/layout/_home.scss
+++ b/app/styles/layout/_home.scss
@@ -1,9 +1,15 @@
 /* ==|======================
    Layout/Home
    ========================= */
-
+.container {
+	border: 1px red solid;
+}
 .main-wrapper {
 	height: 100%;
+
+	@media (min-width: $screen-md-min) {
+//		padding-left: 240px;
+	}
 	@media (min-width: $screen-md-min) {
 		padding-left: 280px;
 	}
@@ -13,12 +19,16 @@
 	position: relative;
 	display: table;
 	width: 100%;
+	height: 600px;
 	padding-top: .15625rem;
-	background: #fff no-repeat center center;
-	height: 29.25rem;
-	background: #f5f5f5 url('../images/StBalmainCoffee.jpg') 0 0 no-repeat;
+	background: #000 url('../images/StBalmainCoffee.jpg') no-repeat center center;
 	background-size: cover;
+	@media (min-width: $screen-md-min) {
 
+		height: 29.25rem;
+
+
+	}
 	&:after {
 //		@media (min-width: $screen-md-min) {
 //			height: 100vh;
@@ -54,11 +64,26 @@
 	color: white;
 	text-align: center;
 	h1 {
-		font-size: 48px;
+		font-size: 22px;
+		@media (min-width: $screen-sm-min) {
+			font-size: 34px;
+		}
+		@media (min-width: $screen-md-min) {
+			font-size: 48px;
+		}
 	}
 	h4 {
 		font-size: 24px;
 		font-style: italic;
+	}
+	.btn-prime {
+		padding: 12px 30px 10px;
+		font-size: 12px;
+		@media (min-width: $screen-md-min) {
+			padding: 17px 60px 14px;
+			font-size: 14px;
+
+		}
 	}
 }
 
