--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,31 +1,95 @@
-<section id="hero">
+<section class="hero section-wrap">
 
-		<div class="container">
-			<div class="hero-info">
+	<div class="container">
+		<div class="hero-info">
 
 			<h1><strong>Like the lush Indonesian island of its origin, <br>this spicy coffee stands alone.</strong></h1>
-			<h4 class="hidden-xs">Full-bodied with a smooth mouthfeel, lingering flavors of dried herbs and fresh earth</h4>
+			<h4 class="hidden-xs">Full-bodied with a smooth mouthfeel, lingering flavors of dried herbs and fresh
+				earth</h4>
 
 			<a href="" class="btn btn-prime">Shop Now</a>
-			</div>
-
-		</div>
-	<!--<div class="overlay"></div>-->
-</section>
-
-<section id="product">
-	<h1>Products</h1>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad architecto aut dolores, dolorum facere ipsam
-	necessitatibus pariatur porro, quae quos rem repellendus saepe. Asperiores ex molestias, odio provident qui vitae.
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
-			<div class="col-sm-3"><img src="http://placehold.it/400x400" alt="" /></div>
 		</div>
 
 	</div>
+	<!--<div class="overlay"></div>-->
+</section>
+
+<section class="product-section section-wrap">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-6"><img src="http://placehold.it/800x600" alt="" /></div>
+			<div class="col-sm-4">
+				<div class="product-summary">
+
+					<h1>Sumatra, Whole Bean</h1>
+					<h4>$40</h4>
+
+					<p class="">Dark Roast </p>
+
+					<div class="entry-content">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab amet commodi cumque dolorem
+							eaque, eius facilis laboriosam laudantium maiores molestias nihil odit perspiciatis
+							provident quaerat recusandae rerum sapiente sunt totam?</p>
+					</div>
+
+					<form class="form-inline">
+						<div class="form-group">
+							<label class="sr-only" for="exampleInputAmount">Quantity:</label>
+
+							<div class="input-group">
+								<div class="input-group-addon">Quantity:</div>
+								<input type="text" class="form-control" id="exampleInputAmount" placeholder="1">
+
+								<div class="input-group-addon">bags</div>
+							</div>
+						</div>
+						<button type="submit" class="btn btn-primary">Buy</button>
+					</form>
+				</div>
+
+
+			</div>
+
+		</div>
+
+	</div>
+</section>
+
+<section class="stats section-wrap">
+
+	<div class="container">
+		<div class="stats-intro">
+			<h2>Consectetur Adipisicing</h2>
+
+			<p>
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis doloremque exercitationem nam
+				praesentium ratione reprehenderit sapiente vero voluptas! A animi consequatur fuga neque officia
+				ut veritatis.
+			</p>
+
+		</div>
+		<ul class="stats-content" id="stats-animate-number">
+			<li class="stat">
+				<div class="number"><span class="animate-number-shutters">86</span>K</div>
+				<span class="type">lorem ipsum</span>
+			</li>
+			<li class="stat">
+				<div class="number"><span class="animate-number-clients">251</span></div>
+				<span class="type">lorem ipsum</span>
+			</li>
+			<li class="stat">
+				<div class="number"><span class="animate-number-projects">658</span></div>
+				<span class="type">lorem ipsum</span>
+			</li>
+			<li class="stat">
+				<div class="number"><span class="animate-number-hours">16</span>K</div>
+				<span class="type">lorem ipsum</span>
+			</li>
+		</ul>
+
+	</div>
+
+
 </section>
 
 <section>
