--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,8 +32,10 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 /* Compass */
 @import "compass/css3/images";
 @import "compass/typography/lists/inline-list";
+@import "compass/typography/links/link-colors";
 @import "compass/css3/transform";
-
+@import "compass/css3/transition";
+@import "compass/css3/border-radius";
 
 /* Tools */
 @import "tools/functions";
@@ -53,6 +55,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "layout/main";
 @import "layout/header";
 @import "layout/nav";
+@import "layout/feed";
 @import "layout/footer";
 
 
