--- a/app/styles/tools/_variables.scss
+++ b/app/styles/tools/_variables.scss
@@ -11,7 +11,7 @@ $font2: Georgia, serif;
 
 $serif: 'Merriweather', serif;
 $serif-2: 'Libre Baskerville', serif;
-//$sans-serif: 'Montserrat', 'Open Sans', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+$sans-serif: 'Montserrat', 'Open Sans', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
 
 
 // = Colors
@@ -20,7 +20,7 @@ $serif-2: 'Libre Baskerville', serif;
 $dune: #372F2C;
 $gold: #C79C36;
 $mine: #2F2F2F;
-
+$spring-wood: #F5F2EB;
 $bg-1: #F8F7F2;
 $bg-2: #F5F2EB;
 // Text
