--- a/app/views/main.html
+++ b/app/views/main.html
@@ -92,4 +92,4 @@
 
 </section>
 
-<section ng-include="'views/feed.html'"></section>
+<section class="feed-section" ng-include="'views/feed.html'"></section>
