Add styling for stats section.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -55,6 +55,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 @import "layout/main";
 @import "layout/header";
 @import "layout/nav";
+@import "layout/stats";
 @import "layout/feed";
 @import "layout/footer";
 
