--- a/app/styles/layout/_feed.scss
+++ b/app/styles/layout/_feed.scss
@@ -3,7 +3,7 @@
 -------------------------------------------------------------- */
 .feed-section {
 	background: $spring-wood;
-	padding: 100px 0;
+	padding: 100px 0 0;
 }
 
 .post-entry {
