--- a/app/styles/modules/_btn.scss
+++ b/app/styles/modules/_btn.scss
@@ -13,6 +13,7 @@
 	@include transition-duration(0.5s);
 	@include transition-timing-function(ease-in-out);
 	border: 2px solid #c19e48;
+	font-family: $sans-serif-2;
 }
 
 
