--- a/app/styles/layout/_stats.scss
+++ b/app/styles/layout/_stats.scss
@@ -1,9 +1,7 @@
 .stats {
 	background: $dune url("../images/photos/city.jpg") center center no-repeat;
-	
 	padding: 80px 0;
-
-
+	background-size: cover;
 }
 
 .stats-intro {
