--- a/app/styles/tools/_variables.scss
+++ b/app/styles/tools/_variables.scss
@@ -12,6 +12,7 @@ $font2: Georgia, serif;
 $serif: 'Merriweather', serif;
 $serif-2: 'Libre Baskerville', serif;
 $sans-serif: 'Montserrat', 'Open Sans', 'Helvetica Neue', 'Helvetica', Helvetica, Arial, sans-serif;
+$sans-serif-2: 'Helvetica Neue', Helvetica, Arial, sans-serif;;
 
 
 // = Colors
