--- a/app/views/feed.html
+++ b/app/views/feed.html
@@ -6,7 +6,7 @@
 					<div class="post-body">
 						<div class="post-header-wrap">
 							<a href="" class="post-author">
-								<img class="post-avatar" src="{{feed.avatar}}" alt="" />
+								<img class="post-avatar" src="http://placehold.it/40x40" alt="avatar" />
 								<span>{{feed.name}}</span></a>
 						</div>
 						<div class="post-content">
@@ -15,7 +15,7 @@
 					</div>
 				</div>
 				<!--end .post-main -->
-				<div class="post-image" ng-show=feed.image>
+				<div class="post-image" ng-if=feed.image>
 					<a href="" class="modal-trigger" data-image="">
 						<img ng-src="images/photos/{{feed.image}}" alt="Description" />
 					</a>
