--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
 	<!--<div class="overlay"></div>-->
 </section>
 
-<section class="product-section section-wrap">
+<section class="product-section section-wrap" id="product">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-6">
@@ -59,7 +59,7 @@
 
 			</div>
 			<div class="col-sm-4">
-				<div class="product-summary">
+				<div class="product-summary" >
 
 					<h1>Sumatra, Whole Bean</h1>
 
