--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
 	<!--<div class="overlay"></div>-->
 </section>
 
-<section class="product-section section-wrap" id="product">
+<section class="product-section section-wrap" id="product-anchor">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-6">
@@ -140,7 +140,7 @@
 	</div>
 </section>
 
-<section class="stats section-wrap">
+<section class="stats section-wrap" id="stats-anchor">
 
 	<div class="container">
 		<div class="stats-intro">
@@ -176,5 +176,4 @@
 
 
 </section>
-
-<section class="feed-section" ng-include="'views/feed.html'"></section>
+<section id="social-anchor" class="feed-section" ng-include="'views/feed.html'"></section>
