--- a/app/styles/layout/_nav.scss
+++ b/app/styles/layout/_nav.scss
@@ -63,7 +63,11 @@
 	.navbar-collapse {
 		@media (min-width: $screen-md-min) {
 			padding: 0;
+			text-align: center;
 		}
+	}
+	.navbar-nav {
+		text-transform: uppercase;
 	}
 	.navbar-nav li.active a {
 		color: $gold;
@@ -92,6 +96,15 @@
 	background: none;
 }
 
+.navbar-brand-large {
+	@media (min-width: $screen-md-min) {
+		display: block;
+		height: auto;
+		margin: 30px auto;
+		width: 150px;
+		float: none;
+	}
+}
 
 .footer-note {
 	@media (min-width: $screen-md-min) {
@@ -100,6 +113,7 @@
 		bottom: 20px;
 		text-align: right;
 		right: 30px;
+		text-transform: none!important;
 	}
 	> li > a {
 		@media (min-width: $screen-md-min) {
