--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<section class="hero section-wrap">
+<section class="hero section-wrap" id="hero-anchor">
 
 	<div class="container">
 		<div class="hero-info">
