Clean up and refactor code.

--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -11,11 +11,9 @@ body {
 	position: relative;
 }
 
-
 .container {
-	@media (min-width: $screen-md-min) { //min 992
+	@media (min-width: $screen-md-min) {
 		width: 690px;
-
 	}
 	@media (min-width: $screen-lg-min) {
 		width: 890px;
@@ -24,6 +22,7 @@ body {
 		width: 1170px;
 	}
 }
+
 h1, h2, h3, h4 {
 	font-family: $serif-2;
 }
@@ -33,5 +32,5 @@ img {
 }
 
 a {
-	@include link-colors ($gold, darken($gold, 20%));
+	@include link-colors($gold, darken($gold, 20%));
 }
