--- a/app/views/main.html
+++ b/app/views/main.html
@@ -98,20 +98,16 @@
 		</div>
 		<ul class="stats-content" id="stats-animate-number">
 			<li class="stat">
-				<div class="number"><span class="animate-number-shutters">86</span>K</div>
-				<span class="type">lorem ipsum</span>
+				<div class="number"><span class="animate-number-sold">106</span>M</div>
+				<span class="type">Units Sold</span>
 			</li>
 			<li class="stat">
-				<div class="number"><span class="animate-number-clients">251</span></div>
-				<span class="type">lorem ipsum</span>
+				<div class="number"><span class="animate-number-shipped">250</span>M</div>
+				<span class="type">Units Shipped</span>
 			</li>
 			<li class="stat">
-				<div class="number"><span class="animate-number-projects">658</span></div>
-				<span class="type">lorem ipsum</span>
-			</li>
-			<li class="stat">
-				<div class="number"><span class="animate-number-hours">16</span>K</div>
-				<span class="type">lorem ipsum</span>
+				<div class="number"><span class="animate-number-stores">658</span></div>
+				<span class="type">Stores</span>
 			</li>
 		</ul>
 	</div>
